# kaolin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  i686-elf-toolchain.cmake
.github/workflows/: style.yml  test.yml
bootloader/: CMakeLists.txt  README.md
bootloader/src/: a20.asm  boot.asm  cpuid.asm  io.asm  io32.asm  io64.asm  lm.asm  load_kernel.asm  memdetect.asm  pm.asm  stage0.asm  stage1.asm
docs/: BUILDING.md  README.md  kaolin_toolchain.cmake
kernel/: CMakeLists.txt  README.md
kernel/src/: acpi.c  acpi.h  apic.c  apic.h  cpuid.c  cpuid.h  io.c  io.h  ioapic.c  ioapic.h  kernel.ld  kernel_main.c  klib.c  klib.h  memory.c  memory.h  msr.c  msr.h  serial.c  serial.h  test.h  va_list.h  vga.c  vga.h  x86_64.ld
kernel/src/arch/x86/: kernel_main.h
kernel/src/arch/x86/acpi/: acpi.c
kernel/src/arch/x86/apic/: ioapic.c  ioapic.h  lapic.c  lapic.h
kernel/src/arch/x86/cpu/: cpuid.c  cpuid.h  gdt.c  gdt.h  idt.c  idt.h  long_mode.c  long_mode.h  msr.c  msr.h
kernel/src/arch/x86/drivers/keyboard/: keyboard.c  keyboard.h
kernel/src/arch/x86/drivers/timer/: timer.c
kernel/src/arch/x86/io/: io.c  io.h
kernel/src/arch/x86/klib/: klib.c
kernel/src/arch/x86/memory/: memmap.c  memmap.h
kernel/src/arch/x86/serial/: serial.h
kernel/src/arch/x86/vga/: vga.c
kernel/src/arch/x86_64/: kernel_main.h
kernel/src/arch/x86_64/acpi/: acpi.c  acpi.h
kernel/src/arch/x86_64/apic/: ioapic.c  ioapic.h  lapic.c  lapic.h
kernel/src/arch/x86_64/cpu/: cpuid.h  gdt.c  gdt.h  idt.c  idt.h  long_mode.c  long_mode.h  msr.c  msr.h
kernel/src/arch/x86_64/drivers/keyboard/: keyboard.c  keyboard.h
kernel/src/arch/x86_64/drivers/mouse/: mouse.c  mouse.h
kernel/src/arch/x86_64/drivers/timer/: timer.c  timer.h
kernel/src/arch/x86_64/io/: io.c
kernel/src/arch/x86_64/klib/: klib.c  klib.h  malloc.c  trap.c
kernel/src/arch/x86_64/memory/: heap.c  heap.h  memmap.c  memmap.h  paging.c  paging.h
kernel/src/arch/x86_64/serial/: serial.c  serial.h
kernel/src/arch/x86_64/tests/: memory_tests.c  test.c  usermode_tests.c
kernel/src/arch/x86_64/usermode/: usermode.c  usermode.h
kernel/src/arch/x86_64/vga/: vga.c  vga.h
kernel/src/tests/: heap_tests.c
tools/: README.md  bind_kernel.py  clang-format.sh  simple-style.sh
